# try-tauri

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: package-lock.json  package.json  tsconfig.json  webpack.base.js  webpack.dev.js  webpack.prod.js
src-ui/src/: index.html  index.tsx
