[package]
name = "try-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "try-tauri"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.10", features = [ "all-api" ] }
actix-web = "3.2.0"
env_logger = "0.8.1"
actix-rt = "1.1.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "try-tauri"
path = "src/main.rs"
